New feature of adding multiple vehicles added
