# services/chatbot/src/resources/crapi-openapi-spec.json
@@ -1009,9 +1009,9 @@
       },
       "parameters" : [ ]
     },
-    "/identity/api/v2/vehicle/add_vehicle" : {
+    "/identity/api/v2/vehicle/verify_vehicle" : {
       "post" : {
-        "operationId" : "add_vehicle",
+        "operationId" : "verify_vehicle",
         "summary" : "Add the user vehicle",
         "tags" : [ "Identity / Vehicle" ],
         "security" : [ {
